# brunoai

./: .env.example  .gitignore  .pre-commit-config.yaml  EXPIRATION_SYSTEM_IMPLEMENTATION.md  LICENSE  LOCAL_DEVELOPMENT_CREDENTIALS.md  MIGRATION_GUIDE.md  Makefile  README.md  VOICE_INTEGRATION_README.md  analysis_options.yaml  fullstack-architecture-template.md
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.gemini/bmad-method/: GEMINI.md
.github/workflows/: backend.yml  deploy.yml  frontend.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: audit_baseline_report.md  brunoa-v3-1-prd.txt
.taskmaster/docs/research/: 2025-07-23_compare-amazon-polly-vs-google-cloud-text-to-speec.md
.taskmaster/reports/: task-complexity-report_mvp.json
.taskmaster/tasks/: task_001_mvp.txt  task_001_phases.txt  task_002_mvp.txt  task_002_phases.txt  task_003_mvp.txt  task_003_phases.txt  task_004_mvp.txt  task_004_phases.txt  task_005_mvp.txt  task_005_phases.txt  task_006_mvp.txt  task_007_mvp.txt  task_008_mvp.txt  task_009_mvp.txt  task_010_mvp.txt  tasks.json
client/: CONNECTIVITY_REFACTOR_SUMMARY.md  PANTRY_CATEGORY_UTILITY.md  PANTRY_RELOCATION_MAP.md  _av_exclusions.md  add_defender_exclusions.ps1  lock_report.txt  pubspec.yaml
client/android/: build.gradle.kts
client/android/app/: build.gradle.kts  google-services.json
client/coverage/: lcov.info
client/integration_test/: README.md  pantry_flow_test.dart
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/linux/: CMakeLists.txt
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/macos/Runner.xcodeproj/: project.pbxproj
client/test/integration/: barcode_workflow_test.dart
client/test/mocks/: IMPLEMENTATION_SUMMARY.md  README.md  all_mocks.dart  all_mocks.mocks.dart  connectivity_mocks.dart  connectivity_mocks.mocks.dart  database_mocks.dart  database_mocks.mocks.dart  example_mock_usage_test.dart  mocks.dart  pantry_service_mocks.dart  pantry_service_mocks.mocks.dart  test_utilities.dart  voice_service_mocks.dart  voice_service_mocks.mocks.dart
client/test/unit/: connectivity_utils_test.dart  connectivity_utils_test.mocks.dart  expiration_utils_test.dart  form_validation_utils_test.dart  pantry_category_extension_test.dart  (+3 more)
docs/: architecture.md  database_erd.md  prd.md
docs/stories/: 1.1.story.md  1.2.story.md
infra/: docker-compose.yml  setup_db.sql
scripts/: dev.bat  dev.sh
server/: .env.example  .gitignore  AUTH_SYSTEM_README.md  DATABASE_SETUP.md  Dockerfile  FIX_SUMMARY.md  JWT_AUTH_IMPLEMENTATION.md  PANTRY_API_DOCS.md  PANTRY_API_IMPLEMENTATION.md  PANTRY_SETUP_GUIDE.md  README.md  SECURITY.md  UUID_MIGRATION_STRATEGY.md  __init__.py  alembic.ini  backup_before_migration_20250725_115941.sql  check_db.py  check_db_status.py  check_db_tables.py  check_pantry_tables.py  check_permissions.py  check_tables.py  clean_restore_db.py  create_tables.py  create_tables_manual.py  db_test.py  debug_registration_error.py  env_verification_summary.md  grant_permissions.py  main.py  main.py.backup  manual_migration.sql  pyproject.toml  reset_db.py  restore_to_bruno_db.py  setup_db.py  setup_uuid_extension.py  test_auth_methods.py  test_auth_simple.py  test_auth_tables.py  (+8 more)
server/alembic/: env.py
server/alembic/versions/: 001_initial_database_schema.py  002_downgrade_to_int.py  002_schema_migration_cleanup.py  003_add_authentication_fields.py  85f2a8c1d6e7_add_firebase_uid_to_users.py  8da28075ea97_align_users_households_with_.py  a4d1233f2b94_merge_multiple_heads.py  c3f6ba074872_switch_users_households_to_uuid_firebase.py
server/bruno_ai_server/: __init__.py  auth.py  config.py  database.py  main.py  schemas.py  seed_data.py  validation.py
server/bruno_ai_server/middleware/: __init__.py  auth_middleware.py  security_middleware.py
server/bruno_ai_server/models/: __init__.py  auth.py  base.py  pantry.py  recipe.py  shopping.py  types.py  user.py
server/bruno_ai_server/routes/: __init__.py  auth.py  categories.py  expiration.py  pantry.py  voice.py
server/bruno_ai_server/scripts/: emergency_downgrade.py
server/bruno_ai_server/services/: __init__.py  auth_service.py  command_parser.py  cookie_service.py  expiration_service.py  firebase_service.py  notification_service.py  scheduler_service.py  security_service.py  tts_service.py  voice_service.py
server/bruno_ai_server/utils/: downgrade_schema.py
server/server/: BACKEND_LOGIC_IMPLEMENTATION.md
server/tests/: conftest.py  test_auth.py  test_auth_middleware.py  test_auth_service.py  test_example_with_scaffolding.py  test_firebase_login.py  test_firebase_registration.py  test_pantry.py  test_pantry_api.py  test_registration_and_auth_middleware.py  test_validation.py
server/tests/integration/: __init__.py  conftest.py  test_auth_integration.py  test_example_integration.py  test_fixtures_validation.py  test_pantry_integration.py  test_registration_without_middleware.py
(+18 files in other folders)
